:art: small fix for align

--- a/frontend/src/components/MainPage/VectorFactor/VectorFactor.css
+++ b/frontend/src/components/MainPage/VectorFactor/VectorFactor.css
@@ -14,7 +14,8 @@
   height: 80%;
   width: calc(100% - 140px);
   margin-right: 40px;
-  margin-top: 5px;
+  margin-top: 2px;
+  margin-bottom: 2px;
   color: white;
   float: right;
   overflow: hidden;
